--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
     "express": "^5.1.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "multer": "^1.4.5-lts.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.1"
   },
   "name": "server",
   "version": "1.0.0",
