--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,13 @@
     "nodemon": "^3.1.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  
   "keywords": [],
   "author": "",
   "license": "ISC"
