--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,11 @@
 {
   "dependencies": {
-    "express": "^5.1.0",
     "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.1"
+    "mongoose": "^8.4.1",
+    "multer": "^1.4.5-lts.1"
   },
   "name": "server",
   "version": "1.0.0",
@@ -20,7 +21,6 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  
   "keywords": [],
   "author": "",
   "license": "ISC"
