--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "multer": "^1.4.5-lts.1"
   },
   "name": "server",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
